src/main/resources/assets/style/main.scss
@use "@fortawesome/fontawesome-free/scss/variables" with (
    $font-path: "@fortawesome/fontawesome-free/webfonts"
);

$primary: #2563eb;
$secondary: #475569;

// Navbar (top)
$navbar-bg: #1e293b;
$navbar-height: 56px;

// Sidebar
$sidebar-bg: #1a1d20;
$sidebar-border-color: #2b3035;
$sidebar-width: 260px;

// Items (e.g. sidebar nav items, dropdown menu items)
$item-text-color: #ababab;
$item-hover-color: #283345;
$item-active-color: #1e293b;

// Cards
$card-bg: #2b3035;
$card-border-width: 0;

@import "bootstrap/scss/bootstrap";

@import "@fortawesome/fontawesome-free/scss/fontawesome";
@import "@fortawesome/fontawesome-free/scss/solid";
@import "@fortawesome/fontawesome-free/scss/regular";
@import "@fortawesome/fontawesome-free/scss/brands";

@import "history";
@import "login";
@import "sidebar";

html {
    scroll-behavior: smooth;
}

[id] {
    scroll-margin-top: calc($navbar-height + 10px);
}

.progress-text {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    text-align: center;
}

.progress-text-right {
    text-align: right;
    width: 2rem;
    height: 1rem;
    font-size: 0.75rem;
}

.episode-pagination > * {
    display: inline-flex;
    width: 50%;
}

.navbar {
    background: $navbar-bg;
}

.image-poster, .image-wide {
    transition: all 0.3s ease;
}

.image-poster:hover, .image-wide:hover {
    transform: scale(1.05);
    border-radius: var(--bs-border-radius);
}

.app-layout {
    display: flex;
    min-height: calc(100vh - $navbar-height);
}

.dropdown-menu {
    background-color: #252a2f;
    border-radius: 0.75rem;
    box-shadow: 0 10px 30px rgba(0,0,0,0.15);
    border: 1px solid rgba(255,255,255,0.05);
}

.dropdown-toggle::after, .collapse-icon {
    transition: transform 0.2s ease;
    transform-origin: center;
}

.dropdown-toggle[aria-expanded="true"]::after, .collapsed .collapse-icon {
    transform: rotate(180deg);
}

.season-dropdown .dropdown-menu {
    overflow-y: auto;
    width: 300px;
    max-height: 300px;
}

.card-plot {
    max-height: 200px;
    overflow-y: auto;
}

.show-card-progress, .season-card-progress {
    background-color: inherit;
    height: 5px;
}

.show-progress-image {
    display: block;
}

.show-progress-image img {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

@media (min-width: 768px) {
    .show-progress-image {
        aspect-ratio: 2 / 3;
    }

    .show-progress-image img {
        border-top-left-radius: var(--bs-border-radius);
        border-bottom-left-radius: var(--bs-border-radius);
    }
}

@media (max-width: 767px) {
    .show-progress-image {
        aspect-ratio: auto;
    }

    .show-progress-image img {
        border-top-left-radius: var(--bs-border-radius);
        border-top-right-radius: var(--bs-border-radius);
    }
}

.show-progress-seasons {
    overflow-y: auto;
    max-height: 250px;
}

.hoverable-item {
    color: $item-text-color;

    &.active {
        background-color: $item-active-color;
    }

    &:hover {
        background-color: $item-hover-color;
    }
}

#nav-searchbar {
    width: 100%;
    max-width: 700px;
}

#nav-searchbar-type {
    @media (max-width: 767px) {
        flex-grow: 0;
        width: 0;
    }

    @media (min-width: 768px) {
        flex-grow: 0;
        width: auto;
    }
}

[data-bs-toggle="collapse"] {
    cursor: pointer;
}

.about-icon {
    font-size: 1.75em;
}

